--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build --target lib --name buidl-test ./src/index.js --no-clean",
+    "buildx": "vue-cli-service build --target lib"
   },
   "dependencies": {
     "vue": "^2.5.22"
